--- a/index.html
+++ b/index.html
@@ -25,18 +25,7 @@
 
 <body style="height: 100vh; max-width: 100vw; overflow-x: hidden !important;" class="">
     <!-- Navigation Bar -->
-    <div class="d-flex p-2 justify-content-between position-sticky top-0"
-        style="height: 100px; z-index: 999999; background: gray;">
-        <div class="d-flex flex-sm-col justify-content-center align-items-center gap-3" style="height: 60px;">
-            <img class="h-100" src="assets/icon.png" alt="Finova Bank Logo">
-            <p>Finova Bank</p>
-        </div>
-        <div class="d-flex flex-sm-col justify-content-center align-items-center gap-3">
-            <a href="" class="text-decoration-none">Create Account</a>
-            <a href="" class="text-decoration-none">Log In</a>
-            <a href="" class="text-decoration-none">About Us</a>
-        </div>
-    </div>
+    <div id="nav_bar"></div>
 
     <!-- Main Content Section -->
     <div class="container-fluid p-5">
@@ -155,6 +144,9 @@
     <footer class="bg-dark text-light text-center py-3 mt-5">
         <p>&copy; 2023 Finova Bank. All rights reserved.</p>
     </footer>
+
+
+    <script src="index.js"></script>
 
 </body>
 
