--- a/bankSignInPage.html
+++ b/bankSignInPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In | PROADE BANK</title>
+    <title>Sign In | Finova Bank</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
@@ -17,8 +17,11 @@
 </style>
 
 <body>
+    <!-- Navigation Bar -->
+    <div id="nav_bar"></div>
+
     <div class="smallDeviceWidth w-50 d-block mx-auto">
-        <marquee behavior="" direction="left" class="my-5 mx-5"><h1>PROADE BANK</h1></marquee>
+        <marquee behavior="" direction="left" class="my-5 mx-5"><h1>Finova Bank</h1></marquee>
         <h3 class="text-center">Sign In Page</h3>
         <input class="form-control my-2" type="text" placeholder="Email" id="eMail">
         <input class="form-control my-2" type="text" placeholder="Phone Number" id="phoneNumber">
@@ -27,6 +30,8 @@
         <button onclick="signIn()" class="w-100 d-block mx-auto btn btn-success">Sign In</button>
         <a href="bankSignUpPage.html">Go to Sign Up</a>
     </div>
+
+    <script src="index.js"></script>
     <script>
         let allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         let currentBankUserIndex = -200
