Working on the dashboard page

--- a/bankDashboard.html
+++ b/bankDashboard.html
@@ -139,19 +139,19 @@
         <p class=" text-center" style="font-weight: bolder; text-decoration: underline 3px;">Carry Out Transaction</p>
         <div class="d-flex justify-content-around">
             <div onclick="deposit()" class="hand">
-                <img src="deposit.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
+                <img src="assets/deposit.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
                 <p class="text-light">Deposit</p>
             </div>
             <div onclick="withdraw()" class="hand">
-                <img src="withdraw.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
+                <img src="assets/withdraw.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
                 <p class="text-light">Withdraw</p>
             </div>
             <div onclick="openTransfer()" class="hand">
-                <img src="transfer.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
+                <img src="assets/transfer.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
                 <p class="text-light">Transfer</p>
             </div>
             <div onclick="openRequestMoney()" class="hand">
-                <img src="transfer.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
+                <img src="assets/transfer.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
                 <p class="text-light">Request Money</p>
             </div>
         </div>
