--- a/bankSignInPage.html
+++ b/bankSignInPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +8,70 @@
     <title>Sign In | Finova Bank</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-<style>
-    @media (max-width: 768px) {
-        .smallDeviceWidth{
-            width: 80% !important;
+    <style>
+        @media (max-width: 768px) {
+            .smallDeviceWidth {
+                width: 80% !important;
+            }
         }
-    }
-</style>
+
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .form-container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-top: 50px;
+        }
+
+        .form-container h1 {
+            color: #28a745;
+            text-align: center;
+        }
+
+        .lead-text {
+            font-size: 18px;
+            margin-bottom: 20px;
+            color: #6c757d;
+            text-align: center;
+        }
+
+        #displayError {
+            color: #dc3545;
+            text-align: center;
+            margin-top: 15px;
+        }
+
+        .sign-in-btn {
+            margin-top: 20px;
+        }
+
+        .go-to-sign-up {
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
+</head>
 
 <body>
     <!-- Navigation Bar -->
     <div id="nav_bar"></div>
 
-    <div class="smallDeviceWidth w-50 d-block mx-auto">
-        <marquee behavior="" direction="left" class="my-5 mx-5"><h1>Finova Bank</h1></marquee>
-        <h3 class="text-center">Sign In Page</h3>
-        <input class="form-control my-2" type="text" placeholder="Email" id="eMail">
-        <input class="form-control my-2" type="text" placeholder="Phone Number" id="phoneNumber">
-        <input class="form-control my-2" type="password" placeholder="Password" id="password">
-        <p id="displayError" class="text-center text-danger"></p>
-        <button onclick="signIn()" class="w-100 d-block mx-auto btn btn-success">Sign In</button>
-        <a href="bankSignUpPage.html">Go to Sign Up</a>
+    <div class="container smallDeviceWidth">
+        <div class="form-container mx-auto">
+            <h1>Finova Bank</h1>
+            <p class="lead-text">Securely access your account</p>
+            <h3 class="text-center">Sign In</h3>
+            <input class="form-control my-2" type="text" placeholder="Email" id="eMail">
+            <input class="form-control my-2" type="text" placeholder="Phone Number" id="phoneNumber">
+            <input class="form-control my-2" type="password" placeholder="Password" id="password">
+            <p id="displayError"></p>
+            <button onclick="signIn()" class="w-100 d-block mx-auto btn btn-success sign-in-btn">Sign In</button>
+            <p class="go-to-sign-up">Don't have an account? <a href="bankSignUpPage.html">Sign Up</a></p>
+        </div>
     </div>
 
     <script src="index.js"></script>
@@ -65,4 +108,6 @@
         }
     </script>
 </body>
+
 </html>
+
