--- a/bankSignUpPage.html
+++ b/bankSignUpPage.html
@@ -25,13 +25,23 @@
             background-repeat: no-repeat;
             background-size: 100% 100%;
         }
+
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
     </style>
 </head>
 
 <body onload="typeNote()">
 
-       <!-- Navigation Bar -->
-       <div id="nav_bar"></div>
+    <!-- Navigation Bar -->
+    <div id="nav_bar"></div>
 
 
     <div class="smallDeviceWidth w-50 d-block mx-auto">
