--- a/createCard.html
+++ b/createCard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,28 @@
     <title id="title">Create Card | PROADE BANK</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="style.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+
 <body>
     <div class="w-50 d-block mx-auto">
-        <marquee behavior="" direction=""><h1 class="text-success mt-5">Create Card</h1></marquee>
+        <marquee behavior="" direction="">
+            <h1 class="text-success mt-5">Create Card</h1>
+        </marquee>
         <input class="form-control my-2" type="number" placeholder="Phone Number" id="phoneNumber">
         <input class="form-control my-2" type="text" placeholder="Password" id="password">
         <input class="form-control my-2" type="number" placeholder="Account Number" id="accountNumber">
         <input class="form-control my-2" type="number" placeholder="PIN" id="pin">
-        <p id="information" class="text-danger text-center"></p>
+        <!-- <p id="toast" class="text-danger text-center"></p> -->
         <button class="w-50 d-block mx-auto btn btn-success" onclick="createCard()">Create</button>
         <a href="bankDashboard.html">Go to dashboard</a>
+        <!-- <button id="showToast">Show Toast</button> -->
+
 
     </div>
 
+    <div id="toast"></div>
+    <script src="index.js"></script>
     <script>
         let allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         let currentBankUserIndex = JSON.parse(localStorage.getItem("currentBankUserIndex"))
@@ -28,70 +37,91 @@
         let phoneNumberRegex = /^[\d]{11}$/
         let pinRegex = /^[\d]{4}$/
         let accountNumberRegex = /^[\d]{10}$/
-        title.innerText = `${allBankUsers[currentBankUserIndex].firstName} | Create Card - PROADE BANK`
-        const createCard =()=>{
+        title.innerText = `${allBankUsers[currentBankUserIndex].firstName} | Create Card - Finova Bank`
+        const createCard = () => {
             if (phoneNumberRegex.test(phoneNumber.value)) {
                 if (accountNumberRegex.test(accountNumber.value)) {
                     if (pinRegex.test(pin.value)) {
-                        
-                    } else{
-                        information.innerText = "Invalid PIN"
-                        setTimeout(()=>information.innerText="", 3000)
+
+                    } else {
+                        toast.innerText = "Invalid PIN"
+                        showToast()
                     }
-                } else{
-                    information.innerText = "Invalid Account Number"
-                    setTimeout(()=>information.innerText="", 3000)
+                } else {
+                    toast.innerText = "Invalid Account Number"
+                    showToast()
                 }
-            } else{
-                information.innerText = "Invalid Phone Number"
-                setTimeout(()=>information.innerText="", 3000)
+            } else {
+                toast.innerText = "Invalid Phone Number"
+                showToast()
             }
             if (allBankUsers[currentBankUserIndex].cardNumber) {
                 alert("User card exists")
                 window.location.href = "bankDashboard.html"
             } else {
-                if (allBankUsers[currentBankUserIndex].phoneNumber==phoneNumber.value) {
-                if (allBankUsers[currentBankUserIndex].password==password.value) {
-                    if (allBankUsers[currentBankUserIndex].accountNumber==accountNumber.value) {
-                        if (allBankUsers[currentBankUserIndex].pin==pin.value) {
-                            let cardNumber = Math.round(Math.random()*10000000000000000)
-                            user = {
-                                firstName: allBankUsers[currentBankUserIndex].firstName,
-                                lastName: allBankUsers[currentBankUserIndex].lastName,
-                                phoneNumber: allBankUsers[currentBankUserIndex].phoneNumber,
-                                eMail: allBankUsers[currentBankUserIndex].eMail,
-                                password: allBankUsers[currentBankUserIndex].password,
-                                pin: allBankUsers[currentBankUserIndex].pin,
-                                accountNumber: allBankUsers[currentBankUserIndex].accountNumber,
-                                accountBalance: allBankUsers[currentBankUserIndex].accountBalance,
-                                transactionHistory: allBankUsers[currentBankUserIndex].transactionHistory,
-                                cardNumber: cardNumber,
-                                request: allBankUsers[currentBankUserIndex].request,
-                                wallets: allBankUsers[currentBankUserIndex].wallets,
-                                profileImg: allBankUsers[currentBankUserIndex].profileImg
+                if (allBankUsers[currentBankUserIndex].phoneNumber == phoneNumber.value) {
+                    if (allBankUsers[currentBankUserIndex].password == password.value) {
+                        if (allBankUsers[currentBankUserIndex].accountNumber == accountNumber.value) {
+                            if (allBankUsers[currentBankUserIndex].pin == pin.value) {
+                                let cardNumber = Math.round(Math.random() * 10000000000000000)
+                                user = {
+                                    firstName: allBankUsers[currentBankUserIndex].firstName,
+                                    lastName: allBankUsers[currentBankUserIndex].lastName,
+                                    phoneNumber: allBankUsers[currentBankUserIndex].phoneNumber,
+                                    eMail: allBankUsers[currentBankUserIndex].eMail,
+                                    password: allBankUsers[currentBankUserIndex].password,
+                                    pin: allBankUsers[currentBankUserIndex].pin,
+                                    accountNumber: allBankUsers[currentBankUserIndex].accountNumber,
+                                    accountBalance: allBankUsers[currentBankUserIndex].accountBalance,
+                                    transactionHistory: allBankUsers[currentBankUserIndex].transactionHistory,
+                                    cardNumber: cardNumber,
+                                    request: allBankUsers[currentBankUserIndex].request,
+                                    wallets: allBankUsers[currentBankUserIndex].wallets,
+                                    profileImg: allBankUsers[currentBankUserIndex].profileImg
+                                }
+                                allBankUsers[currentBankUserIndex] = user
+                                localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
+                                toast.innerText = "success"
+                                showToast()
+                                setTimeout(() => {
+                                    window.location.href = "bankDashboard.html"
+                                }, 900);
+                            } else {
+                                toast.innerText = "Wrong Pin"
+                                showToast()
                             }
-                            allBankUsers[currentBankUserIndex] = user
-                            localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
-                            information.innerText = "success"
-                        } else{
-                            information.innerText = "Wrong Pin"
-                            setTimeout(()=>{information.innerText=""}, 3000)
+                        } else {
+                            toast.innerText = "Wrong account number"
+                            showToast()
                         }
-                    } else{
-                        information.innerText = "Wrong account number"
-                        setTimeout(()=>{information.innerText=""}, 3000)
+                    } else {
+                        toast.innerText = "Wrong password"
+                        showToast()
                     }
-                } else{
-                    information.innerText = "Wrong password"
-                    setTimeout(()=>{information.innerText=""}, 3000)
+                } else {
+                    toast.innerText = "Wrong phone number"
+                    showToast()
                 }
-            } else{
-                information.innerText = "Wrong phone number"
-                setTimeout(()=>{information.innerText=""}, 3000)
-            }
 
             }
         }
+
+
+        const showToast = () => {
+            const toast = document.getElementById('toast');
+
+            toast.style.opacity = 1;
+            toast.style.display = 'block';
+
+            setTimeout(() => {
+                toast.style.opacity = 0;
+            }, 2000);
+
+            setTimeout(() => {
+                toast.style.display = 'none';
+            }, 2500);
+        };
     </script>
 </body>
+
 </html>
