Working on the nav_bar component

--- a/bankSignUpPage.html
+++ b/bankSignUpPage.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up | Finova Bank</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
     <style>
         @media (max-width: 768px) {
             .smallDeviceWidth {
