--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,6 +8,8 @@
     <title>About Us | Finova Bank</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
     <style>
         @media (max-width: 768px) {
             .smallDeviceWidth {
