--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Welcome to Finova Bank</title>
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
     <style>
         * {
@@ -51,7 +53,7 @@
             </div>
         </div>
     </div>
-
+    
     <!-- About Us Section -->
     <div class="container mx-auto mt-5 p-2">
         <div class="row">
